# filter

./: readme.md
data/: 10.pcd  123.pcd  damage_main.pcd  damagesquare.pcd  data.pcd  filled_square.pcd  main.pcd  map.pcd  newsquare1cm.pcd  normalvcs_cloud.pcd  pingqie.pcd  rabbit.ply  square10cm.ply  square1cm.ply  tensquare1cm.pcd  triangle_damage_data.pcd  triangle_damage_data.ply  voxel_fliered.pcd  wakong.pcd  walengzhu.pcd
data/new/: Cloud_fracture.pcd  Cloud_whole.pcd  damdataPierhollow.pcd  damdataPierliefeng.pcd  damdataPipeaoxian.pcd  damdataPipeduanlie.pcd  damdataPipeliefeng.pcd  damdataPipetuqi.pcd  data.pcd  line_wanqu.pcd  line_zhixian.pcd  pier_crack.pcd  pier_fracture.pcd  pier_hollow.pcd  pier_whole.pcd
data/new/wanquxianlanduanlie/: cloud_cluster_0000.pcd  cloud_cluster_0001.pcd  cloud_cluster_0002.pcd  wanduan.pcd
data/new/zhixian/: cloud_cluster_0000.pcd  cloud_cluster_0002.pcd  zhiduan.pcd
include/: filter.hpp
src/: CMakeLists.txt  cal_mesh.cpp  correspondence.cpp  corrview.cpp  cylinder.cpp  filter.cpp  hull.cpp  main.cpp  montecarlo.cpp  myproject.cpp  normalvector_estimate.cpp  range_image.cpp  segementation.cpp  subtraction.cpp
